--- a/references.bib
+++ b/references.bib
@@ -308,6 +308,19 @@
   doi = {10.1109/ICRA57147.2024.10611717}
 }
 
+@article{manso_wine_2021,
+  title = {Wine Quality and Berry Size: A Case Study with {{Tempranillo Tinto}} Progenies},
+  shorttitle = {Wine Quality and Berry Size},
+  author = {Manso-Mart{\'i}nez, Cristina and S{\'a}enz-Navajas, Mar{\'i}a Pilar and Men{\'e}ndez, Cristina M and Hern{\'a}ndez, Mar{\'i}a M},
+  year = {2021},
+  month = jul,
+  journal = {Journal of the Science of Food and Agriculture},
+  volume = {101},
+  number = {9},
+  pages = {3952--3960},
+  doi = {10.1002/jsfa.11035}
+}
+
 @inproceedings{marangoz_fruit_2022,
   title = {Fruit {{Mapping}} with {{Shape Completion}} for {{Autonomous Crop Monitoring}}},
   booktitle = {2022 {{IEEE}} 18th {{International Conference}} on {{Automation Science}} and {{Engineering}} ({{CASE}})},
@@ -318,6 +331,18 @@
   publisher = {IEEE},
   address = {Mexico City, Mexico},
   doi = {10.1109/CASE49997.2022.9926466}
+}
+
+@article{melo_berry_2015,
+  title = {Berry {{Size Variation}} of {{Vitis}} Vinifera {{L}}. Cv. {{Syrah}}: {{Morphological Dimensions}}, {{Berry Composition}} and {{Wine Quality}}},
+  shorttitle = {Berry {{Size Variation}} of {{Vitis}} Vinifera {{L}}. Cv. {{Syrah}}},
+  author = {Melo, M.S. and Schultz, H.R. and Volschenk, C.G. and Hunter, J.J.},
+  year = {2015},
+  month = sep,
+  journal = {South African Journal of Enology and Viticulture},
+  volume = {36},
+  number = {1},
+  doi = {10.21548/36-1-931}
 }
 
 @incollection{mohimont_comparison_2021,
